--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ img {
     margin: 50px 350px ;
 }
 
-#score {
+.scoreBoard {
     text-align: right;
-    padding: 0px 70px 0px 0px;
+    font-size: 15px;
 }
